--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "lodash.debounce": "^4.0.8",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
