added admin sidebar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "git.enableSmartCommit": true,
   "git.openAfterClone": "always",
+  "typescript.tsdk": "node_modules\\typescript\\lib",
 }
