--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.5",
+    "@types/react": "19.0.6",
     "daisyui": "^4.12.23",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
