--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.throttle": "^4.1.9",
     "chart.js": "^4.4.7",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
