started customer and staf listing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,7 @@
   "git.enableSmartCommit": true,
   "git.openAfterClone": "always",
   "typescript.tsdk": "node_modules\\typescript\\lib",
+  "[typescript][typescriptreact][javascript][javascriptreact]": {
+    "editor.tabSize": 2
+  }
 }
